--- a/layout.css
+++ b/layout.css
@@ -1,14 +1,9 @@
-section{
-  width: 480px;
-  height: 767px;
-  border: 2px black solid;
-  margin: auto;
-}
+
 
 header {
   border: 2px black solid;
-  width: 480px;
   height: 75px;
+  line-height: 75px;
 }
 
 div :nth-child(2){
